plugins {
    id 'org.jetbrains.kotlin.jvm'
}
architectury {
    common rootProject.enabled_platforms.split(',')
}

loom {
    accessWidenerPath = project(':common').file("src/main/resources/swm.accessWidener")
}

dependencies {
    modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
    modImplementation "dev.architectury:architectury:$rootProject.architectury_api_version"

    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}
repositories {
    mavenCentral()
}
kotlin {
    jvmToolchain(17)
}
